add initial nav bar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7352,6 +7352,10 @@ video {
   height: 16rem;
 }
 
+.h-70 {
+  height: 70px;
+}
+
 .h-auto {
   height: auto;
 }
@@ -22228,6 +22232,10 @@ video {
     height: 16rem;
   }
 
+  .sm\:h-70 {
+    height: 70px;
+  }
+
   .sm\:h-auto {
     height: auto;
   }
@@ -37097,6 +37105,10 @@ video {
 
   .md\:h-64 {
     height: 16rem;
+  }
+
+  .md\:h-70 {
+    height: 70px;
   }
 
   .md\:h-auto {
@@ -51970,6 +51982,10 @@ video {
     height: 16rem;
   }
 
+  .lg\:h-70 {
+    height: 70px;
+  }
+
   .lg\:h-auto {
     height: auto;
   }
@@ -66839,6 +66855,10 @@ video {
 
   .xl\:h-64 {
     height: 16rem;
+  }
+
+  .xl\:h-70 {
+    height: 70px;
   }
 
   .xl\:h-auto {
